--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,46 @@
-version: '3.7'
+version: "3.7"
 
 services:
-  # Postgres database for Dagster
-  postgres:
+  # This service runs the postgres DB used by dagster for run storage, schedule storage,
+  # and event log storage.
+  docker_postgresql:
     image: postgres:11
-    container_name: dagster_postgres
+    container_name: docker_postgresql
     environment:
       POSTGRES_USER: "postgres_user"
       POSTGRES_PASSWORD: "postgres_password"
       POSTGRES_DB: "postgres_db"
     networks:
-      - dagster_network
+      - docker_network
 
-  # User code container
-  user_code:
+  # This service runs the gRPC server that loads your user code, in both dagster-webserver
+  # and dagster-daemon. By setting DAGSTER_CURRENT_IMAGE to its own image, we tell the
+  # run launcher to use this same image when launching runs in a new container as well.
+  # Multiple containers like this can be deployed separately - each just needs to run on
+  # its own port, and have its own entry in the workspace.yaml file that's loaded by the
+      # webserver.
+  docker_user_code:
     build:
       context: .
-      dockerfile: Dockerfile_user_code
-    container_name: dagster_user_code
-    image: dagster_user_code_image
+      dockerfile: ./Dockerfile_user_code
+    container_name: docker_user_code
+    image: docker_user_code_image
     restart: always
     environment:
       DAGSTER_POSTGRES_USER: "postgres_user"
       DAGSTER_POSTGRES_PASSWORD: "postgres_password"
       DAGSTER_POSTGRES_DB: "postgres_db"
-      DAGSTER_CURRENT_IMAGE: "dagster_user_code_image"
-    volumes:
-      - ./:/opt/dagster/dagster_home/
+      DAGSTER_CURRENT_IMAGE: "docker_user_code_image"
     networks:
-      - dagster_network
+      - docker_network
 
-  # Dagster webserver
-  webserver:
+  # This service runs dagster-webserver, which loads your user code from the user code container.
+  # Since our instance uses the QueuedRunCoordinator, any runs submitted from the webserver will be put on
+  # a queue and later dequeued and launched by dagster-daemon.
+  docker_webserver:
     build:
       context: .
-      dockerfile: Dockerfile_web_and_daemon
+      dockerfile: ./Dockerfile_dagster
     entrypoint:
       - dagster-webserver
       - -h
@@ -42,51 +48,50 @@ services:
       - -p
       - "3000"
       - -w
-      - "workspace.yaml"
-    container_name: dagster_webserver
-    image: dagster_webserver_image
+      - workspace.yaml
+    container_name: docker_webserver
     expose:
-      - 3000
+      - "3000"
     ports:
-      - 3000:3000
-    depends_on:
-      - user_code
-      - postgres
+      - "3000:3000"
     environment:
       DAGSTER_POSTGRES_USER: "postgres_user"
       DAGSTER_POSTGRES_PASSWORD: "postgres_password"
       DAGSTER_POSTGRES_DB: "postgres_db"
-      DAGSTER_CURRENT_IMAGE: "dagster_webserver_image"
-    volumes:
+    volumes: # Make docker client accessible so we can terminate containers from the webserver
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/io_manager_storage:/tmp/io_manager_storage
     networks:
-      - dagster_network
+      - docker_network
+    depends_on:
+      - docker_postgresql
+      - docker_user_code
 
-  # Dagster daemon
-  daemon:
+  # This service runs the dagster-daemon process, which is responsible for taking runs
+  # off of the queue and launching them, as well as creating runs from schedules or sensors.
+  docker_daemon:
     build:
       context: .
-      dockerfile: Dockerfile_web_and_daemon
+      dockerfile: ./Dockerfile_dagster
     entrypoint:
       - dagster-daemon
       - run
-    container_name: dagster_daemon
-    image: dagster_daemon_image
-    depends_on:
-      - user_code
-      - postgres
-    networks:
-      - dagster_network
+    container_name: docker_daemon
+    restart: on-failure
     environment:
       DAGSTER_POSTGRES_USER: "postgres_user"
       DAGSTER_POSTGRES_PASSWORD: "postgres_password"
       DAGSTER_POSTGRES_DB: "postgres_db"
-    volumes:
+    volumes: # Make docker client accessible so we can launch containers using host docker
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/io_manager_storage:/tmp/io_manager_storage
+    networks:
+      - docker_network
+    depends_on:
+      - docker_postgresql
+      - docker_user_code
 
 networks:
-  dagster_network:
+  docker_network:
     driver: bridge
-    name: dagster_network
+    name: docker_network
